--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portofolio-v5",
+  "homepage": "https://anggafr12.github.io/portofolio-eng",
   "private": true,
   "version": "0.0.0",
   "type": "module",
