--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,8 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm install
+      run: rmdir /s /q node_modules && del package-lock.json && npm install && npm install --legacy-peer-deps
+
 
     - name: Build
       run: npm run build
